--- a/my-app/src/components/App/App.css
+++ b/my-app/src/components/App/App.css
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   background-color: #d2d0d0;
+  width: 100%;
+  height: 100%;
 }
 
 header {
@@ -11,36 +13,55 @@ header {
   width: 100%;
   height: 9em;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin-bottom: 1em;
   background-color: #6a555f;
 }
-
+.App_heading{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  height: 100%;
+  margin-left: 6em;
+}
+.App__header-shopping{
+  width: 30%;
+  display: flex;
+  justify-content: flex-end;
+}
 .MuiIconButton-root .App__header-shopping-cart {
   font-size: 2.3em;
   color: #ffffff;
 }
 
-header > h1 {
+.App_heading > h1 {
   font-size: 5em;
   letter-spacing: .2em;
   color: #ffffff;
-  margin-right: 15em;
-  margin-left: 16em;
   transform: skewX(-20deg);
+  margin-left: .3em;
 }
 
-header>img{
-  position: absolute;
-  top: 2em;
-  right: 130em;
+.App_heading>img{
   width: 8.5em;
   border-radius: 50%;
 }
 
 main {
   width: 70%;
-
   background-color: #d2d0d0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main__search{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
