played with card collection max width to help with responsiveness, gave each rating a digit representation out of 5, hover effects on cards so more box shadow and also liniar gradiant switches colour on hover. Connected search input to its relevent state and added functionality to store input when typing

--- a/my-app/src/components/App/CardCollection/CardCollection.css
+++ b/my-app/src/components/App/CardCollection/CardCollection.css
@@ -1,6 +1,7 @@
 .card-collection{
-
+    max-width: 1300px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
+    margin-top: 1em;
 }
