--- a/my-app/src/components/App/CardCollection/Card/Card.css
+++ b/my-app/src/components/App/CardCollection/Card/Card.css
@@ -1,21 +1,40 @@
 .card {
-  width: calc(33.33% - 180px);
+  width: calc(30%);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 1px solid rgb(106, 103, 103);
   border-radius: 25px;
-  margin: 1em 0.2em;
+  margin: 1em .5em;
   background-image: linear-gradient(270deg, #737579, #554949);
   box-shadow: 3px 3px 1px 1px #433f3f;
   color: white;
   text-align: center;
 }
+
+.card:hover{
+  transform: translateY(-4px);
+  box-shadow: 5px 5px 7px 1px #433f3f;
+  background-image: linear-gradient(270deg, #554949, #737579);
+  cursor: pointer;
+}
 .card__image > img {
   width: 200px;
   height: 200px;
   border-radius: 12px;
+}
+.card__rating{
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.card__rating>p{
+  font-weight: 600;
+  margin-left: .5em;
+
 }
 
 .card__price>p{
@@ -34,3 +53,4 @@
   font-weight: 800;
   cursor: pointer;
 }
+
